@@ -1,3 +1,7 @@
+20110904
+ - (djm) [regress/connect-privsep.sh regress/test-exec.sh] demote fatal
+   regress errors for the sandbox to warnings. ok tim dtucker
+
 20110829
  - (djm) [openbsd-compat/port-linux.c] Suppress logging when attempting
    to switch SELinux context away from unconfined_t, based on patch from
